--- a/.github/workflows/supabase-deploy.yml
+++ b/.github/workflows/supabase-deploy.yml
@@ -2,13 +2,13 @@ name: Supabase Deploy
 
 on:
   push:
-    branches: [main]
+    branches: [master]
     paths:
       - "supabase/**"
       - ".github/workflows/supabase-deploy.yml"
 
 concurrency:
-  group: supabase-deploy-main
+  group: supabase-deploy-master
   cancel-in-progress: true
 
 jobs:
@@ -33,24 +33,6 @@ jobs:
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
 
-      # Optional: keep secrets in sync via GitHub Actions (recommended once you add these secrets in GitHub).
-      # If you prefer to manage secrets only in the Supabase dashboard, you can delete this step.
-      - name: Set Function Secrets (Optional)
-        if: ${{ secrets.RESEND_API_KEY != '' }}
-        run: |
-          supabase secrets set \
-            RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}" \
-            RAZORPAY_KEY_ID="${{ secrets.RAZORPAY_KEY_ID }}" \
-            RAZORPAY_KEY_SECRET="${{ secrets.RAZORPAY_KEY_SECRET }}" \
-            TWILIO_ACCOUNT_SID="${{ secrets.TWILIO_ACCOUNT_SID }}" \
-            TWILIO_AUTH_TOKEN="${{ secrets.TWILIO_AUTH_TOKEN }}" \
-            TWILIO_PHONE_NUMBER="${{ secrets.TWILIO_PHONE_NUMBER }}" \
-            ADMIN_PHONE_NUMBER="${{ secrets.ADMIN_PHONE_NUMBER }}" \
-            ADMIN_EMAIL="${{ secrets.ADMIN_EMAIL }}" \
-            MAPBOX_PUBLIC_TOKEN="${{ secrets.MAPBOX_PUBLIC_TOKEN }}"
-        env:
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-
       - name: Deploy Edge Functions
         run: |
           supabase functions deploy admin-otp
@@ -65,4 +47,3 @@ jobs:
           supabase functions deploy security-alert
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-
