--- a/.github/workflows/supabase-deploy.yml
+++ b/.github/workflows/supabase-deploy.yml
@@ -23,8 +23,23 @@ jobs:
         with:
           version: latest
 
+      - name: Validate Required Secrets
+        env:
+          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+          SUPABASE_PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF || vars.SUPABASE_PROJECT_REF }}
+        run: |
+          if [ -z "${SUPABASE_ACCESS_TOKEN}" ]; then
+            echo "Missing SUPABASE_ACCESS_TOKEN (must be set as a GitHub Actions secret)."
+            exit 1
+          fi
+          if [ -z "${SUPABASE_PROJECT_REF}" ]; then
+            echo "Missing SUPABASE_PROJECT_REF (set as a GitHub Actions secret or variable)."
+            exit 1
+          fi
+          echo "Secrets present. project_ref_len=${#SUPABASE_PROJECT_REF} token_len=${#SUPABASE_ACCESS_TOKEN}"
+
       - name: Link Project
-        run: supabase link --project-ref "${{ secrets.SUPABASE_PROJECT_REF }}"
+        run: supabase link --project-ref "${{ secrets.SUPABASE_PROJECT_REF || vars.SUPABASE_PROJECT_REF }}"
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
 
