Add ops swagger/health edge functions

--- a/.github/workflows/supabase-deploy.yml
+++ b/.github/workflows/supabase-deploy.yml
@@ -58,6 +58,9 @@ jobs:
           supabase functions deploy location-confirmation
           supabase functions deploy mapbox-token
           supabase functions deploy new-device-alert
+          supabase functions deploy ops-health
+          supabase functions deploy ops-openapi
+          supabase functions deploy ops-swagger
           supabase functions deploy razorpay
           supabase functions deploy security-alert
         env:
