--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -29,3 +29,12 @@ verify_jwt = true
 
 [functions.new-device-alert]
 verify_jwt = false
+
+[functions.ops-health]
+verify_jwt = false
+
+[functions.ops-openapi]
+verify_jwt = false
+
+[functions.ops-swagger]
+verify_jwt = false
