Add mentorship booking flow with IST calendar, Razorpay, and admin view

--- a/supabase/.env.example
+++ b/supabase/.env.example
@@ -8,7 +8,7 @@ SUPABASE_SERVICE_ROLE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY"
 
 # Edge Function secrets
 RESEND_API_KEY="..."
-ADMIN_EMAIL="official.abhishekpanda@gmail.com"
+ADMIN_EMAIL="hello@abhishekpanda.com"
 
 TWILIO_ACCOUNT_SID="..."
 TWILIO_AUTH_TOKEN="..."
@@ -19,4 +19,3 @@ MAPBOX_PUBLIC_TOKEN="pk...."
 
 RAZORPAY_KEY_ID="..."
 RAZORPAY_KEY_SECRET="..."
-
