feat: improve responsiveness, SEO, branding, ABHIBOT, and performance

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -44,3 +44,12 @@ verify_jwt = false
 
 [functions.mentorship-booking]
 verify_jwt = false
+
+[functions.abhibot-chat]
+verify_jwt = false
+
+[functions.refresh-ai-news]
+verify_jwt = false
+
+[functions.send-magic-link]
+verify_jwt = false
