Add brand intro, course 1:1 flow, ebooks module

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -53,3 +53,12 @@ verify_jwt = false
 
 [functions.send-magic-link]
 verify_jwt = false
+
+[functions.ebooks-lead]
+verify_jwt = false
+
+[functions.ebooks-verify-otp]
+verify_jwt = false
+
+[functions.ebooks-download]
+verify_jwt = false
