--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build && node scripts/prerender-blog.mjs",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:ebooks-otp": "node --test --experimental-strip-types tests/ebooks-otp.test.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -60,6 +61,7 @@
     "react-grid-layout": "^2.0.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.61.1",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
