--- a/supabase/.env.example
+++ b/supabase/.env.example
@@ -9,6 +9,9 @@ SUPABASE_SERVICE_ROLE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY"
 # Edge Function secrets
 RESEND_API_KEY="..."
 ADMIN_EMAIL="hello@abhishekpanda.com"
+EMAIL_FROM="Abhishek Panda <no-reply@abhishekpanda.com>"
+JWT_DOWNLOAD_SECRET="replace-with-long-random-secret"
+SITE_URL="http://localhost:8080"
 
 TWILIO_ACCOUNT_SID="..."
 TWILIO_AUTH_TOKEN="..."
