--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^1.3.0",
+    "jszip": "^3.10.1",
+    "epubjs": "^0.3.93",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
