polishing and adding scripts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test:ebooks-otp": "node --test --experimental-strip-types tests/ebooks-otp.test.ts"
+    "test:ebooks-otp": "node --test --experimental-strip-types tests/ebooks-otp.test.ts",
+    "supabase:status": "bash scripts/supabase-migrate.sh status",
+    "supabase:migration:new": "bash scripts/supabase-migrate.sh new",
+    "supabase:push": "bash scripts/supabase-migrate.sh push",
+    "supabase:types": "bash scripts/supabase-migrate.sh types"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
